<resources>
    <string name="app_name">Car Rent App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logo_name">Hello there, Welcome Back</string>
    <string name="slogan">Sign in to continue</string>
    <string name="logo_image_description">Rent Car Logo</string>
    <string name="go">Go</string>
    <string name="new_user">New User? Sign Up</string>
    <string name="company_name">Car\'s Rent</string>
    <string name="company_growth_quote">Fastest Growing Car Rental</string>
    <string name="welcome">Welcome</string>
    <string name="signup_slogan">Sign up for a new journey</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="phoneno">Phone No</string>
    <string name="already_account">ALREADY HAVE AN ACCOUNT? LOGIN</string>
    <string name="bookings">Bookings</string>
    <string name="balance">Balance</string>
    <string name="update">Update</string>
    <string name="enter_otp">Enter Otp</string>

</resources>